# DiffNet

./: A_opt.py  diffnet.py  examples.py  setup.py  test.sh  time_ms.py
c_extension/: sumdR2.cpp
profile_A_optimal/: check.sh  profile.sh
profile_E5-2620-v4-2.1G_32GB/: result.txt_mkl  result.txt_openblas  sparse_result.txt.  sparse_result.txt.2  sparse_result.txt.3
profile_E5-2620-v4-2.1G_32GB/profile_mkl/: profile.out  profile.out.b  profile.sh  profile.txt  profile.txt.b  test.sh
profile_E5-2620-v4-2.1G_32GB/profile_mkl_sparse/: output.txt  profile.out  profile.out.b  profile.sh  profile.txt  profile.txt.b  test.sh
profile_E5-2620-v4-2.1G_32GB/profile_openblas/: profile.out  profile.sh  profile.txt
tests/: CMakeLists.txt  gen_data.py  matrix_data.h  pairwise_diff.h  pairwise_diff1.h  pairwise_diff2.h  sumdR2.comp  test_sumdR2.cpp
tests/cvxopt_core/: base.c  cvxopt.h  dense.c
